src/objects/P2P_Personal_Campaign__c.object
<CustomObject>
    <description>Personal campaigns are campaigns created by end users on behalf of an organization</description>
    <fields>
        <fullName>Amount_Raised__c</fullName>
        <description>The amount raised as captured in Springboard</description>
        <inlineHelpText>The amount raised as captured in Springboard</inlineHelpText>
        <label>Amount Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activitiy__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activitiy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Campaign__c</fullName>
        <formula>End_Date__c  -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_into_Campaign__c</fullName>
        <formula>TODAY( ) -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days into Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Expiration__c</fullName>
        <formula>End_Date__c - TODAY( )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days till Expiration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donation_Count__c</fullName>
        <description>The number of donations made to this personal campaign.</description>
        <label>Donation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Action_Date__c</fullName>
        <description>The date this campaign first had an action taken.</description>
        <inlineHelpText>The date this campaign first had an action taken.</inlineHelpText>
        <label>First Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fundraising_Goal__c</fullName>
        <description>Only used if the goal type is Amount Raised</description>
        <label>Fundraising Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission Count</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Campaign_Medium__c</fullName>
        <label>Google Campaign Medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Campaign_Source__c</fullName>
        <label>Google Campaign Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Campaign__c</fullName>
        <label>Google Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google Campaign Content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Referrer__c</fullName>
        <label>Initial Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Action_Date__c</fullName>
        <description>The date this campaign last had an action taken.</description>
        <inlineHelpText>The date this campaign last had an action taken.</inlineHelpText>
        <label>Last Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <label>Market Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_ID__c</fullName>
        <inlineHelpText>The node ID of this P2P Personal Campaign in Springboard</inlineHelpText>
        <label>Node ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P2P_Campaign_Description__c</fullName>
        <label>Campaign Introduction</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P2P_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The peer to peer campaign this personal campaign belongs to.</description>
        <label>P2P Campaign</label>
        <referenceTo>P2P_Campaign__c</referenceTo>
        <relationshipLabel>P2P Personal Campaigns</relationshipLabel>
        <relationshipName>P2P_Personal_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2P_Campaigner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>P2P Personal Campaigns (Contact)</relationshipLabel>
        <relationshipName>P2P_Personal_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2P_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P2P Category</label>
        <referenceTo>P2P_Category__c</referenceTo>
        <relationshipLabel>P2P Personal Campaigns</relationshipLabel>
        <relationshipName>P2P_Personal_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2P_Personal_Campaign_URL__c</fullName>
        <inlineHelpText>URL to the personal campaign within Springboard</inlineHelpText>
        <label>P2P Personal Campaign URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Published_in_Springboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this campaign published in Springboard</inlineHelpText>
        <label>Published in Springboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Salesforce Campaign is this P2P Personal Campaign associate to</inlineHelpText>
        <label>Salesforce Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>P2P Personal Campaigns</relationshipLabel>
        <relationshipName>P2P_Personal_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <label>Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Count__c</fullName>
        <description>The number of submissions from Springboard</description>
        <inlineHelpText>The number of submissions from Springboard</inlineHelpText>
        <label>Submission Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Goal__c</fullName>
        <description>Only used if the goal type is Submission Count</description>
        <inlineHelpText>Count of submissions for Submission Count goal types, calculated by Springboard</inlineHelpText>
        <label>Submission Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Donation_Amount__c</fullName>
        <description>The suggested donation amount from the P2P Personal Campaign in Springboard</description>
        <inlineHelpText>The suggested donation amount from the P2P Personal Campaign in Springboard</inlineHelpText>
        <label>Suggested Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Message_Actions__c</fullName>
        <description>The total number of message actions taken.</description>
        <inlineHelpText>The total number of message actions taken by this contact.</inlineHelpText>
        <label>Total Message Actions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Petitions_Signed__c</fullName>
        <description>Total number of petitions signed.</description>
        <inlineHelpText>Total number of petitions signed.</inlineHelpText>
        <label>Total Petitions Signed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Social_Actions__c</fullName>
        <description>The total number of social actions taken.</description>
        <inlineHelpText>The total number of social actions taken by this contact.</inlineHelpText>
        <label>Total Social Actions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>P2P Personal Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>P2P Personal Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P2P Personal Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>